# reversi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: main.py
src/reversi/: main.py
